--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,10 +4,10 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        {% if not state %}
+        {% if id is none %}
             <H1>States</H1>
             <UL>
-                {% for state in obj_list %}
+                {% for state in states %}
                 <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
                 {% endfor %}
             </UL>
@@ -17,11 +17,11 @@
                 <H3>Cities:</H3>
                 <UL>
                     {% for city in state.cities | sort(attribute="name") %}
-					<LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
                     {% endfor %}
                 </UL>
             {% else %}
-			<H1>Not found!</H1>
+            <H1>Not found!</H1>
             {% endif %}
         {% endif %}
     </BODY>
